@@ -1,3 +1,8 @@
+2014-07-31  Tassilo Horn  <tsdh@gnu.org>
+
+	* gnus.texi (Group Parameters): Document that `gcc-self' may also be a
+	list.
+
 2014-07-18  Albert Krewinkel  <albert+gnus@zeitkraut.de>
 
 	* gnus.texi (Posting Styles): Document the possibility to perform
